--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,34 @@ group 'twrs'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'scala'
 
-sourceCompatibility = 1.5
+sourceSets {
+  main {
+    scala {
+      srcDirs = ['src/main/scala', 'src/main/java']
+    }
+    java {
+      srcDirs = []
+    }
+  }
+  test {
+    scala {
+      srcDirs = ['src/test/scala', 'src/test/java']
+    }
+    java {
+      srcDirs = []
+    }
+  }
+}
 
 repositories {
-    mavenCentral()
+  mavenLocal()
+  mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+  compile group: 'org.scala-lang', name: 'scala-compiler', version: '2.12.2'
+  compile group: 'org.scala-lang', name: 'scala-library', version: '2.12.2'
+  testCompile group: 'junit', name: 'junit', version: '4.12'
 }
